--- a/requirements_onnx.txt
+++ b/requirements_onnx.txt
@@ -1,5 +1,5 @@
-# ECS服务器轻量级依赖（不含PyTorch）
-# 用于ONNX模型推理，内存占用优化
+# ECS服务器依赖 - PyTorch版本
+# 适用于2CPU/1GB RAM的服务器
 
 # 核心依赖
 ccxt>=4.0.0           # 交易所API
@@ -7,9 +7,8 @@ pandas>=2.0.0         # 数据处理
 numpy>=1.24.0         # 数值计算
 scikit-learn>=1.3.0   # 数据预处理
 
-# ONNX推理（替代PyTorch）
-onnx>=1.15.0
-onnxruntime>=1.16.0   # CPU推理引擎，内存占用低
+# PyTorch (CPU版本，节省空间)
+torch>=2.0.0          # 深度学习框架（CPU版本）
 
 # 可选：进度条和时间处理
 tqdm>=4.65.0
