--- a/requirements_onnx.txt
+++ b/requirements_onnx.txt
@@ -6,6 +6,7 @@ ccxt>=4.0.0           # 交易所API
 pandas>=2.0.0         # 数据处理
 numpy>=1.24.0         # 数值计算
 scikit-learn>=1.3.0   # 数据预处理
+python-dotenv>=0.19.0 # 环境变量加载
 
 # PyTorch (CPU版本，节省空间)
 torch>=2.0.0          # 深度学习框架（CPU版本）
